test/src/e2e_vm_tests/test_programs/should_fail/const_top_level_no_expr/src/main.sw
library;

const X: u64;
